- Fixed some issues

--- a/Main/Source code/Elysium.Notifications/Elysium.Notifications.NETFX45.csproj
+++ b/Main/Source code/Elysium.Notifications/Elysium.Notifications.NETFX45.csproj
@@ -197,6 +197,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
