--- a/Main/Source code/Elysium.Design/Elysium.Design.10.0.csproj
+++ b/Main/Source code/Elysium.Design/Elysium.Design.10.0.csproj
@@ -104,6 +104,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Manager.cs" />
     <Compile Include="Metadata.cs" />
     <None Include="Properties\AssemblyInfo.tt">
