- Added style for ToolTip

--- a/Main/Source code/Elysium/Elysium.NETFX4.csproj
+++ b/Main/Source code/Elysium/Elysium.NETFX4.csproj
@@ -366,6 +366,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </None>
+    <None Include="Themes\Windows\ToolTip.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccentBrushes.cs" />
