--- a/Main/Source code/Elysium/Elysium.NETFX45.csproj
+++ b/Main/Source code/Elysium/Elysium.NETFX45.csproj
@@ -361,6 +361,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </None>
+    <None Include="Themes\Windows\ToolTip.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccentBrushes.cs" />
