--- a/Main/Source code/SDK/NuGet/Elysium.Theme.1.5.nuspec
+++ b/Main/Source code/SDK/NuGet/Elysium.Theme.1.5.nuspec
@@ -4,15 +4,15 @@
         <id>Elysium.Theme</id>
         <version>2.0</version>
         <title>Elysium</title>
-        <authors>Alex F. Sherman &amp; Codeplex Community</authors>
-        <owners>Alex F. Sherman</owners>
+        <authors>Aleksandr Vishnyakov &amp; Codeplex Community</authors>
+        <owners>Aleksandr Vishnyakov</owners>
         <licenseUrl>http://elysium.codeplex.com/license</licenseUrl>
         <projectUrl>http://elysium.codeplex.com/</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Elysium is library that implements Metro style for Windows Presentation Foundation applications.</description>
         <summary />
         <releaseNotes>Elysium 2.0 RTM is not backward compatible with previous version of Elysium. For more information, see documentation.</releaseNotes>
-        <copyright>Copyright © Alex F. Sherman &amp; Codeplex Community 2011-2012</copyright>
+        <copyright>Copyright © Aleksandr Vishnyakov &amp; Codeplex Community 2011-2012</copyright>
         <language>en-US</language>
         <tags>Elysium WPF UI Theme Theming Metro Modern Windows Phone 8</tags>
         <frameworkAssemblies>
