--- a/Main/Source code/SDK/NuGet/Elysium.Theme.symbols.nuspec
+++ b/Main/Source code/SDK/NuGet/Elysium.Theme.symbols.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Elysium.Theme</id>
-        <version>2.0</version>
+        <version>2.1-EAP</version>
         <title>Elysium</title>
         <authors>Aleksandr Vishnyakov &amp; Codeplex Community</authors>
         <owners>Aleksandr Vishnyakov</owners>
