- Skinning changed to dynamic version

--- a/Main/Source code/Elysium/Elysium.NETFX4.csproj
+++ b/Main/Source code/Elysium/Elysium.NETFX4.csproj
@@ -192,68 +192,51 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="..\.NET Framework 4\Elysium\Themes\Generic.xaml">
-      <Link>Themes\Generic.xaml</Link>
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Generic.tt</DependentUpon>
-    </Page>
-    <None Include="..\.NET Framework 4\Elysium\Themes\Generic.tt">
-      <Link>Themes\Generic.tt</Link>
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Generic.xaml</LastGenOutput>
-    </None>
     <None Include="Properties\AssemblyInfo.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>AssemblyInfo.cs</LastGenOutput>
     </None>
-    <None Include="Themes\ApplicationBar\ApplicationBar.xaml">
+    <Page Include="Themes\ApplicationBar\ApplicationBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Buttons\Button.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\Button.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Buttons\ButtonBase.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\ButtonBase.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Buttons\CheckBox.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\CheckBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Buttons\CommandButton.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\CommandButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Buttons\CommandButtonBase.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\CommandButtonBase.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Buttons\DropDownCommandButton.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\DropDownCommandButton.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Buttons\ToggleCommandButton.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\ToggleCommandButton.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Buttons\RadioButton.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\RadioButton.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Buttons\RepeatButton.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\RepeatButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Buttons\ToggleButton.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <Page Include="Themes\Brushes.xaml">
+    </Page>
+    <Page Include="Themes\Buttons\ToggleButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -261,115 +244,119 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <None Include="Themes\Icons.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <Page Include="Themes\LightBrushes.xaml">
+    <Page Include="Themes\Generic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <None Include="Themes\Menus\ContextMenu.xaml">
+    <Page Include="Themes\Icons.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Menus\Menu.xaml">
+    </Page>
+    <Page Include="Themes\LightBrushes.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Menus\Submenu.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Menus\MenuItem.xaml">
+    </Page>
+    <Page Include="Themes\Menus\ContextMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Ranges\ProgressRing.xaml">
+    </Page>
+    <Page Include="Themes\Menus\Menu.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Ranges\ProgressBar.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Ranges\Slider.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Ranges\ToggleSwitch.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Scrolls\ScrollBar.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Scrolls\ScrollViewer.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Selectors\ComboBox.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Selectors\ComboBoxItem.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Selectors\ListBox.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Selectors\ListBoxItem.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Selectors\SelectorsItemsBase.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\SharedResources.xaml">
+    </Page>
+    <Page Include="Themes\Menus\Submenu.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Tabs\TabControl.xaml">
+    </Page>
+    <Page Include="Themes\Menus\MenuItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\Tabs\TabItem.xaml">
+    </Page>
+    <Page Include="Themes\Ranges\ProgressRing.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\Ranges\ProgressBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\TextBoxes\TextBoxesBase.xaml">
+    </Page>
+    <Page Include="Themes\Ranges\Slider.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\TextBoxes\PasswordBox.xaml">
+    </Page>
+    <Page Include="Themes\Ranges\ToggleSwitch.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\TextBoxes\RichTextBox.xaml">
+    </Page>
+    <Page Include="Themes\Scrolls\ScrollBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\TextBoxes\TextBox.xaml">
+    </Page>
+    <Page Include="Themes\Scrolls\ScrollViewer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="Themes\TextBoxes\TextBoxBase.xaml">
+    </Page>
+    <Page Include="Themes\Selectors\ComboBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </None>
-    <None Include="..\.NET Framework 4\Elysium\Themes\Windows\Window.xaml">
+    </Page>
+    <Page Include="Themes\Selectors\ComboBoxItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Selectors\ListBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Selectors\ListBoxItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Selectors\SelectorsItemsBase.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Tabs\TabControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Tabs\TabItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\TextBoxes\TextBoxesBase.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\TextBoxes\PasswordBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\TextBoxes\RichTextBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\TextBoxes\TextBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\TextBoxes\TextBoxBase.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Windows\ToolTip.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="..\.NET Framework 4\Elysium\Themes\Windows\Window.xaml">
       <Link>Themes\Windows\Window.xaml</Link>
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Themes\Windows\ToolTip.xaml">
-      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\SharedResources.xaml">
       <Generator>MSBuild:Compile</Generator>
-    </None>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccentBrushes.cs" />
@@ -377,7 +364,9 @@
     <Compile Include="Controls\Window\WindowCommands.cs" />
     <Compile Include="Converters\ThicknessConverter.cs" />
     <Compile Include="Converters\IsGreaterThanConverter.cs" />
+    <Compile Include="Extensions\Collections\CachedResourceDictionary.cs" />
     <Compile Include="Extensions\Threading helpers\DispatcherExtensions.cs" />
+    <Compile Include="Extensions\Validation helpers\DesignUtil.cs" />
     <Compile Include="Native\Interop.cs" />
     <Compile Include="Native\Monitor.cs" />
     <Compile Include="Native\Taskbar.cs" />
@@ -385,7 +374,6 @@
     <Compile Include="Native\Window.cs" />
     <Compile Include="Native\Windows.cs" />
     <Compile Include="Parameters\Bullet.cs" />
-    <Compile Include="Parameters\Design.cs" />
     <Compile Include="Extensions\Boxing helpers\NullableBoxingHelper.cs" />
     <Compile Include="Extensions\Collections\Extensions.cs" />
     <Compile Include="Extensions\Collections\IObservableDictionary.cs" />
@@ -449,15 +437,12 @@
     <Compile Include="Parameters\TabItem.cs" />
     <Compile Include="Parameters\ToggleSwitch.cs" />
     <Compile Include="Parameters\Window.cs" />
-    <Compile Include="Parameters\Manager.cs" />
-    <Compile Include="Manager.cs" />
-    <Compile Include="Exceptions\InvalidStyleException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>AssemblyInfo.tt</DependentUpon>
     </Compile>
-    <Compile Include="Theme.cs" />
+    <Compile Include="Resources.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Documentation\en\Elysium.tt">
@@ -468,6 +453,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Elysium.tt</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Documentation\ru\Elysium.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -478,41 +464,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Elysium.tt</DependentUpon>
     </None>
-    <None Include="Exceptions\InvalidStyleException.en.xml">
-      <DependentUpon>InvalidStyleException.cs</DependentUpon>
-    </None>
-    <None Include="Exceptions\InvalidStyleException.ru.xml">
-      <DependentUpon>InvalidStyleException.cs</DependentUpon>
-    </None>
     <None Include="AccentBrushes.en.xml">
       <DependentUpon>AccentBrushes.cs</DependentUpon>
     </None>
     <None Include="AccentBrushes.ru.xml">
       <DependentUpon>AccentBrushes.cs</DependentUpon>
-    </None>
-    <None Include="Theme.en.xml">
-      <DependentUpon>Theme.cs</DependentUpon>
-    </None>
-    <None Include="Theme.ru.xml">
-      <DependentUpon>Theme.cs</DependentUpon>
-    </None>
-    <None Include="Manager.en.xml">
-      <DependentUpon>Manager.cs</DependentUpon>
-    </None>
-    <None Include="Manager.ru.xml">
-      <DependentUpon>Manager.cs</DependentUpon>
-    </None>
-    <None Include="Parameters\Design.en.xml">
-      <DependentUpon>Design.cs</DependentUpon>
-    </None>
-    <None Include="Parameters\Design.ru.xml">
-      <DependentUpon>Design.cs</DependentUpon>
-    </None>
-    <None Include="Parameters\Manager.en.xml">
-      <DependentUpon>Manager.cs</DependentUpon>
-    </None>
-    <None Include="Parameters\Manager.ru.xml">
-      <DependentUpon>Manager.cs</DependentUpon>
     </None>
     <None Include="Parameters\General.en.xml">
       <DependentUpon>General.cs</DependentUpon>
@@ -603,7 +559,6 @@
     </None>
     <None Include="Parameters\Window.ru.xml">
       <DependentUpon>Window.cs</DependentUpon>
-      <SubType>Designer</SubType>
     </None>
     <None Include="Extensions\Collections\IObservableDictionary.en.xml">
       <DependentUpon>IObservableDictionary.cs</DependentUpon>
@@ -855,7 +810,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <TextTemplatingPath>$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\TextTemplating\v10.0\Microsoft.TextTemplating.targets</TextTemplatingPath>
