- Fixed critical bug 1433 - Fixed some issues - Code style fixes and improvements - Refactoring

--- a/2.0/Source code/Elysium.Notifications.Server/Elysium.Notifications.Server.NETFX4.csproj
+++ b/2.0/Source code/Elysium.Notifications.Server/Elysium.Notifications.Server.NETFX4.csproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\..\..\SigningKey.pfx</AssemblyOriginatorKeyFile>
-    <DigitalSignatureKeyFile>..\..\..\..\..\..\Source code\SigningKey.pfx</DigitalSignatureKeyFile>
+    <DigitalSignatureKeyFile>..\..\..\..\..\SigningKey.pfx</DigitalSignatureKeyFile>
     <DigitalSignatureParams>/t http://timestamp.comodoca.com/authenticode</DigitalSignatureParams>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
