--- a/Main/Source code/Elysium.Test/Elysium.Test.NETFX4.csproj
+++ b/Main/Source code/Elysium.Test/Elysium.Test.NETFX4.csproj
@@ -23,7 +23,7 @@
     <CodeContractsAssemblyMode>0</CodeContractsAssemblyMode>
   </PropertyGroup>
   <PropertyGroup>
-    <DigitalSignatureKeyFile>..\..\..\..\..\..\Source code\SigningKey.pfx</DigitalSignatureKeyFile>
+    <DigitalSignatureKeyFile>..\..\..\..\..\SigningKey.pfx</DigitalSignatureKeyFile>
     <DigitalSignatureParams>/t http://timestamp.comodoca.com/authenticode</DigitalSignatureParams>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
